--- a/.github/workflows/basic_ci.yml
+++ b/.github/workflows/basic_ci.yml
@@ -15,33 +15,29 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.8", "3.9", "3.10", "3.11"]
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v3
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-
+      - name: Python info
+        run: |
+          which python
+          python --version
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install cookiecutter black isort pylint
-
       - name: Create project from template
         run: cookiecutter . --no-input
-
       - name: Run Black (check formatting)
         run: black --check .
-
       - name: Run isort (check import sorting)
         run: isort --check-only .
-
       - name: Run Pylint
         run: |
           # Assuming that your template creates a Python package named "my_python_lib"
           pylint my_python_lib
-
       - name: Run tests
         run: |
           # Add commands to run your tests here
