--- a/.github/workflows/basic_ci.yml
+++ b/.github/workflows/basic_ci.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Install the package
         run: pip install -e .
       - name: Run Pylint
-        run: pylint my_python_lib
+        run: pylint .
