--- a/.github/workflows/basic_ci.yml
+++ b/.github/workflows/basic_ci.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install cookiecutter black isort pylint
+          pip install cookiecutter black isort
       - name: Create project from template
         run: cookiecutter . --no-input
       - name: Run Black (check formatting)
