--- a/{{cookiecutter.directory_name}}/.github/workflows/basic_ci.yml
+++ b/{{cookiecutter.directory_name}}/.github/workflows/basic_ci.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     branches: [ main ]
 
+{%- raw %}
+
 jobs:
   build:
     name: Build on ${{ matrix.os }} with Python ${{ matrix.python-version }}
@@ -27,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e .[dev,train]
+          pip install -e .[dev]
       - name: Show pip list
         run: |
           pip list
@@ -40,3 +42,5 @@ jobs:
           ruff check .
       - name: Run tests
         run: pytest
+
+{%- endraw %}
