--- a/{{cookiecutter.directory_name}}/.github/workflows/basic_ci.yml
+++ b/{{cookiecutter.directory_name}}/.github/workflows/basic_ci.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           pip list
       - name: Run Black (check formatting)
-        run: black --check .
+        run: black --diff --check --color .
       - name: Run isort (check import sorting)
         run: isort --check-only .
       - name: Run linter (ruff)
