--- a/{{cookiecutter.directory_name}}/pyproject.toml
+++ b/{{cookiecutter.directory_name}}/pyproject.toml
@@ -23,11 +23,11 @@ classifiers = [
     }[cookiecutter.license] }}",
     "Natural Language :: English",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
 ]
 dependencies = []
 description = "{{ cookiecutter.package_short_description }}"
@@ -70,4 +70,5 @@ line_length = "{{ cookiecutter.line_length }}"
 [tool.pylint]  # If you opt to use pylint
 # Pylint configuration options
 
-
+[tool.ruff]
+line-length = 120
