--- a/{{cookiecutter.directory_name}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.directory_name}}/.pre-commit-config.yaml
@@ -4,11 +4,12 @@ repos:
     hooks:
       - id: black
   - repo: https://github.com/pycqa/isort
-    rev: 5.8.0
+    rev: 5.11.2
     hooks:
       - id: isort
   - repo: https://github.com/astral-sh/ruff-pre-commit
     # Ruff version.
-    rev: v0.1.4
+    rev: v0.14.2
     hooks:
-      - id: ruff
+      - id: ruff-check
+      - id: ruff-format
