--- a/.github/workflows/basic_ci.yml
+++ b/.github/workflows/basic_ci.yml
@@ -27,12 +27,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install cookiecutter black isort
+          pip install cookiecutter ruff
       - name: Create project from template
         run: cookiecutter . --no-input
-      - name: Run Black (check formatting)
-        run: black --check .
-      - name: Run isort (check import sorting)
-        run: isort --check-only .
+      - name: Run Ruff linter
+        run: ruff check --output-format=github
       - name: Install the package
         run: pip install -e .
