--- a/{{cookiecutter.directory_name}}/pyproject.toml
+++ b/{{cookiecutter.directory_name}}/pyproject.toml
@@ -72,3 +72,13 @@ line_length = "{{ cookiecutter.line_length }}"
 
 [tool.ruff]
 line-length = 120
+
+[tool.ruff.format]
+docstring-code-format = true
+line-ending = "lf"
+
+[tool.ruff.lint]
+extend-select = ["D", "E", "I"]
+
+[tool.ruff.lint.isort]
+known-first-party = ["{{cookiecutter.directory_name}}"]
