--- a/{{cookiecutter.directory_name}}/.github/workflows/basic_ci.yml
+++ b/{{cookiecutter.directory_name}}/.github/workflows/basic_ci.yml
@@ -15,11 +15,11 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.9", "3.10", "3.11"]
+        python-version: ["3.10", "3.11", "3.12", "3.13"]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v5
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v6
         with:
           python-version: ${{ matrix.python-version }}
       - name: Python info
@@ -29,18 +29,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e .[dev]
-      - name: Show pip list
-        run: |
-          pip list
-      - name: Run Black (check formatting)
-        run: black --diff --check --color .
-      - name: Run isort (check import sorting)
-        run: isort --check-only .
-      - name: Run linter (ruff)
-        run: |
-          ruff check .
-      - name: Run tests
-        run: pytest
+          pip install cookiecutter ruff
+      - name: Create project from template
+        run: cookiecutter . --no-input
+      - name: Run Ruff linter
+        run: ruff check --output-format=github
+      - name: Install the package
+        run: pip install -e .
 
 {%- endraw %}
