Removed Docstring Rule

--- a/{{cookiecutter.directory_name}}/pyproject.toml
+++ b/{{cookiecutter.directory_name}}/pyproject.toml
@@ -78,7 +78,7 @@ docstring-code-format = true
 line-ending = "lf"
 
 [tool.ruff.lint]
-extend-select = ["D", "E", "I"]
+extend-select = ["E", "I"]
 
 [tool.ruff.lint.isort]
 known-first-party = ["{{cookiecutter.directory_name}}"]
