--- a/.github/workflows/basic_ci.yml
+++ b/.github/workflows/basic_ci.yml
@@ -27,10 +27,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install cookiecutter ruff
+          pip install cookiecutter black isort
       - name: Create project from template
         run: cookiecutter . --no-input
-      - name: Run Ruff linter
-        run: ruff check --output-format=github
+      - name: Run Black (check formatting)
+        run: black --check .
+      - name: Run isort (check import sorting)
+        run: isort --check-only .
       - name: Install the package
         run: pip install -e .
